--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,12 @@ gemfile:
   - test/gemfiles/Gemfile.rails-3.1.x
 matrix:
   exclusion:
-    - { rvm: 1.9.2, gemfile: test/gemfiles/Gemfile.rails-2.0.x }
-    - { rvm: 1.9.2, gemfile: test/gemfiles/Gemfile.rails-2.1.x }
-    - { rvm: 1.9.2, gemfile: test/gemfiles/Gemfile.rails-2.2.x }
+    - rvm: 1.9.2
+      gemfile: test/gemfiles/Gemfile.rails-2.0.x
+    - rvm: 1.9.2
+      gemfile: test/gemfiles/Gemfile.rails-2.1.x
+    - rvm: 1.9.2
+      gemfile: test/gemfiles/Gemfile.rails-2.2.x
 branches:
   only:
     - master
