Moved haml-spec from test/haml/spec to test/haml-spec

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
-[submodule "test/haml/spec"]
-	path = test/haml/spec
+[submodule "test/haml-spec"]
+	path = test/haml-spec
 	url = git://github.com/norman/haml-spec.git
 [submodule "vendor/sass"]
 	path = vendor/sass
