Test on JRuby and Rubinius.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 rvm:
   - 1.8.7
   - 1.9.3
+  - jruby-19mode
+  - rbx-19mode
 gemfile:
   - test/gemfiles/Gemfile.rails-2.0.x
   - test/gemfiles/Gemfile.rails-2.1.x
@@ -15,6 +17,21 @@ matrix:
     - { rvm: 1.9.3, gemfile: test/gemfiles/Gemfile.rails-2.0.x }
     - { rvm: 1.9.3, gemfile: test/gemfiles/Gemfile.rails-2.1.x }
     - { rvm: 1.9.3, gemfile: test/gemfiles/Gemfile.rails-2.2.x }
+
+    # Don't kill Travis: just test against the latest version on JRuby and rbx.
+    - { rvm: jruby-19mode, gemfile: test/gemfiles/Gemfile.rails-2.0.x }
+    - { rvm: jruby-19mode, gemfile: test/gemfiles/Gemfile.rails-2.1.x }
+    - { rvm: jruby-19mode, gemfile: test/gemfiles/Gemfile.rails-2.3.x }
+    - { rvm: jruby-19mode, gemfile: test/gemfiles/Gemfile.rails-xss-2.3.x }
+    - { rvm: jruby-19mode, gemfile: test/gemfiles/Gemfile.rails-3.0.x }
+    - { rvm: jruby-19mode, gemfile: test/gemfiles/Gemfile.rails-3.1.x }
+
+    - { rvm: rbx-19mode, gemfile: test/gemfiles/Gemfile.rails-2.0.x }
+    - { rvm: rbx-19mode, gemfile: test/gemfiles/Gemfile.rails-2.1.x }
+    - { rvm: rbx-19mode, gemfile: test/gemfiles/Gemfile.rails-2.3.x }
+    - { rvm: rbx-19mode, gemfile: test/gemfiles/Gemfile.rails-xss-2.3.x }
+    - { rvm: rbx-19mode, gemfile: test/gemfiles/Gemfile.rails-3.0.x }
+    - { rvm: rbx-19mode, gemfile: test/gemfiles/Gemfile.rails-3.1.x }
 branches:
   only:
     - master
