--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "test/haml-spec"]
 	path = test/haml-spec
-	url = git://github.com/norman/haml-spec.git
+	url = git://github.com/haml/haml-spec.git
