--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "test/haml/spec"]
 	path = test/haml/spec
-	url = git://github.com/norman/haml-spec.git
+	url = git://github.com/haml/haml-spec.git
 [submodule "vendor/sass"]
 	path = vendor/sass
 	url = git://github.com/nex3/sass.git
