--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 rvm:
   - 1.8.7
   - 1.9.3
+  - ruby-head
   - jruby-18mode
   - rbx-18mode
   - rbx-19mode
@@ -10,7 +11,7 @@ gemfile:
   - test/gemfiles/Gemfile.rails-3.2.x
 matrix:
   exclude:
-    # Don't kill Travis: just test against the latest version on JRuby and rbx.
+    # Don't kill Travis: just test against the latest version on Head, JRuby and rbx.
     - { rvm: jruby-18mode, gemfile: test/gemfiles/Gemfile.rails-3.0.x }
     - { rvm: jruby-18mode, gemfile: test/gemfiles/Gemfile.rails-3.1.x }
 
@@ -20,8 +21,12 @@ matrix:
     - { rvm: rbx-19mode, gemfile: test/gemfiles/Gemfile.rails-3.0.x }
     - { rvm: rbx-19mode, gemfile: test/gemfiles/Gemfile.rails-3.1.x }
 
+    - { rvm: ruby-head, gemfile: test/gemfiles/Gemfile.rails-3.0.x }
+    - { rvm: ruby-head, gemfile: test/gemfiles/Gemfile.rails-3.1.x }
+
   allow_failures:
     - { rvm: rbx-19mode, gemfile: test/gemfiles/Gemfile.rails-3.2.x }
+    - { rvm: ruby-head, gemfile: test/gemfiles/Gemfile.rails-3.2.x }
 
 branches:
   only:
