--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,8 @@ matrix:
     - { rvm: ruby-head, gemfile: test/gemfiles/Gemfile.rails-3.1.x }
     - { rvm: ruby-head, gemfile: test/gemfiles/Gemfile.rails-master }
 
+    - { rvm: 1.8.7, gemfile: test/gemfiles/Gemfile.rails-master }
+
   allow_failures:
     - { rvm: rbx-19mode, gemfile: test/gemfiles/Gemfile.rails-3.2.x }
     - { rvm: jruby-18mode, gemfile: test/gemfiles/Gemfile.rails-3.2.x }
