--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 rvm:
   - 1.8.7
   - 1.9.3
-  - ruby-head
+  - 2.0.0
   - jruby-18mode
   - rbx-18mode
   - rbx-19mode
@@ -9,38 +9,36 @@ gemfile:
   - test/gemfiles/Gemfile.rails-3.0.x
   - test/gemfiles/Gemfile.rails-3.1.x
   - test/gemfiles/Gemfile.rails-3.2.x
-  - test/gemfiles/Gemfile.rails-master
+  - test/gemfiles/Gemfile.rails-4.0.x
 matrix:
   exclude:
     # Don't kill Travis: just test against the latest version on Head, JRuby and rbx.
     - { rvm: jruby-18mode, gemfile: test/gemfiles/Gemfile.rails-3.0.x }
     - { rvm: jruby-18mode, gemfile: test/gemfiles/Gemfile.rails-3.1.x }
-    - { rvm: jruby-18mode, gemfile: test/gemfiles/Gemfile.rails-master }
+    - { rvm: jruby-18mode, gemfile: test/gemfiles/Gemfile.rails-3.2.x }
 
     - { rvm: rbx-18mode, gemfile: test/gemfiles/Gemfile.rails-3.0.x }
     - { rvm: rbx-18mode, gemfile: test/gemfiles/Gemfile.rails-3.1.x }
-    - { rvm: rbx-18mode, gemfile: test/gemfiles/Gemfile.rails-master }
+    - { rvm: rbx-18mode, gemfile: test/gemfiles/Gemfile.rails-3.2.x }
 
     - { rvm: rbx-19mode, gemfile: test/gemfiles/Gemfile.rails-3.0.x }
     - { rvm: rbx-19mode, gemfile: test/gemfiles/Gemfile.rails-3.1.x }
-    - { rvm: rbx-19mode, gemfile: test/gemfiles/Gemfile.rails-master }
+    - { rvm: rbx-19mode, gemfile: test/gemfiles/Gemfile.rails-3.2.x }
 
-    - { rvm: ruby-head, gemfile: test/gemfiles/Gemfile.rails-3.0.x }
-    - { rvm: ruby-head, gemfile: test/gemfiles/Gemfile.rails-3.1.x }
-    - { rvm: ruby-head, gemfile: test/gemfiles/Gemfile.rails-master }
+    - { rvm: 2.0.0, gemfile: test/gemfiles/Gemfile.rails-3.0.x }
+    - { rvm: 2.0.0, gemfile: test/gemfiles/Gemfile.rails-3.1.x }
+    - { rvm: 2.0.0, gemfile: test/gemfiles/Gemfile.rails-3.2.x }
 
-    - { rvm: 1.8.7, gemfile: test/gemfiles/Gemfile.rails-master }
+    # Rails 4 doesn't run on Ruby 1.8
+    - { rvm: 1.8.7, gemfile: test/gemfiles/Gemfile.rails-4.0.x }
 
   allow_failures:
     - { rvm: rbx-19mode, gemfile: test/gemfiles/Gemfile.rails-3.2.x }
     - { rvm: jruby-18mode, gemfile: test/gemfiles/Gemfile.rails-3.2.x }
-    - { rvm: ruby-head, gemfile: test/gemfiles/Gemfile.rails-3.2.x }
-    - { rvm: 1.9.3, gemfile: test/gemfiles/Gemfile.rails-master }
 
 branches:
   only:
     - master
     - stable
-    - 4-0-stable
     - 3-1-stable
 script: "bundle exec rake submodules test"
