--- a/.travis.yml
+++ b/.travis.yml
@@ -41,4 +41,9 @@ branches:
     - master
     - stable
     - 3-1-stable
+
+before_install:
+  - gem update --system
+  - gem install bundler
+
 script: "bundle exec rake submodules test"
