--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,9 @@ matrix:
     # Rails 4 doesn't run on Ruby 1.8
     - { rvm: 1.8.7, gemfile: test/gemfiles/Gemfile.rails-4.0.x }
 
+  allow_failures:
+     - { rvm: jruby, gemfile: test/gemfiles/Gemfile.rails-4.0.x }
+
 branches:
   only:
     - master
